--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "next": "13.3.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
