--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-iframe": "^1.8.5",
     "react-image-gallery": "^1.2.12",
     "react-media": "^1.10.0",
     "react-select": "^5.7.3",
