--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-media": "^1.10.0",
     "react-select": "^5.7.3",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.4"
+    "semantic-ui-react": "^2.1.4",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "^8.38.0",
