--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "babel-plugin-inline-react-svg": "^2.0.2",
     "firebase": "8.2.0",
     "next": "13.3.0",
     "prop-types": "^15.8.1",
